feat: mask formatter dependencie

--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: 5.8.0+1
   pretty_dio_logger: ^1.4.0
   auto_injector: ^2.1.1
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
