--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   auto_injector: ^2.1.1
   mask_text_input_formatter: ^2.9.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
